# SnakeGameAI

./: .gitignore  README.md  logger.py  main.py  pyproject.toml  requirements.txt
app/: app.py  app_ai.py  app_manual.py
app/ai_modules/: agent.py  pytorch_agent.py  tensor_flow_agent.py
cells/: body_cell.py  cell.py  food_cell.py
constants/: colors.py
field/: field.py  snake.py
field/cells/: __init__.py  body_cell.py  food_cell.py
models/: py_torch__model.py  tensor_flow__dqn_model.py
