[project]
name = "cell-auto-life"
version = "0.1.0"
description = "Snake"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.6.0",
    "customtkinter==5.2.2",
    "darkdetect==0.8.0",
    "ipython>=8.32.0",
    "keras>=3.8.0",
    "matplotlib>=3.10.0",
    "numpy>=2.0.0",
    "packaging==23.2",
    "pydantic==2.6.0",
    "pygame==2.5.2",
    "tensorflow>=2.18.0",
    "torch>=2.6.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
